--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,11 +78,17 @@ jobs:
         with:
           node-version: '16'
 
+      - name: Cache Node.js modules
+        uses: actions/cache@v3
+        with:
+          path: Frontend/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Install Frontend Dependencies
         working-directory: Frontend
         run: |
-          # Make sure the node_modules directory has the correct permissions
-          sudo chown -R $USER:$(id -gn) ./
           npm install --legacy-peer-deps
 
       - name: Build Frontend
